--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^10.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "^3.3.0",
