--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.7.1",
