--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "^3.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
